<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.nikhil.gormalone.ui.product.AddProductViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/marginL"
                android:gravity="center"
                android:text="Add New Product"
                android:textSize="@dimen/textL"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_TIL"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginL"
                android:layout_marginTop="@dimen/marginXL"
                android:layout_marginEnd="@dimen/marginL"
                android:hint="@string/product_name"
                app:errorEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text="@={viewModel.productName}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/desc_TIL"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/marginL"
                android:hint="@string/product_description"
                app:errorEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/name_TIL">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/desc_TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:lines="4"
                    android:text="@={viewModel.productDescription}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/quantity_TIL"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/marginL"
                android:hint="@string/product_quantity"
                app:errorEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/desc_TIL">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/quantity_TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:text="@={viewModel.productQuantity}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/price_TIL"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/marginL"
                android:hint="@string/product_price"
                app:errorEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/quantity_TIL">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/price_TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:text="@={viewModel.productPrice}" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/saveProduct_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/marginXL"
                android:text="@string/save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/price_TIL" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>